# demo-gif-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo_gif.py  pyproject.toml
.slopless/findings/: 2026-07-04-230922--readme.json  2026-07-04-230952--readme.json  2026-07-04-231012--readme.json  2026-07-04-231950--readme.json  2026-07-04-232015--readme.json
demo_gif_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_demo_gif.py
